--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,70 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+/* TEXT  */
+
+.text-gradient {
+    @apply bg-gradient-to-r from-[#FBDA61] to-[#FF5ACD] inline-block text-transparent bg-clip-text
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.text-truncate {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+/* BACKGROUND  */
+
+.bg-gradient {
+    @apply bg-gradient-to-r from-[#FBDA61] to-[#FF5ACD]
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+/* CUSTOM SCROLL-BAR  */
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10rem;
+    /* backhround gradient  */
+    background: linear-gradient(13deg, #fbda61, #ff5acd);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+.hidden-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+/* LOADING  */
+.loading-action{
+    background-color: rgb(219, 219, 219);
+    position: relative;
+}
+
+.loading-action::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(13deg, #fbda61, #ff5acd);
+    animation: loading 2s infinite;
+}
+
+@keyframes loading {
+    0%{
+        transform: translateX(-100%);
+    }
+    100%{
+        transform: translateX(100%);
+    }
 }
