--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: 'San Francisco' ;
+    src: url(../assets/fonts/SanFranciscoDisplay-Bold.otf);
+    src: url(../assets/fonts/SanFranciscoDisplay-Light.otf);
+    src: url(../assets/fonts/SanFranciscoDisplay-Medium.otf);
+    src: url(../assets/fonts/SanFranciscoDisplay-Regular.otf);
+}
+
+body {
+    font-family: 'San Francisco', sans-serif;
+}
+
 /* TEXT  */
 
 .text-gradient {
